<resources>
    <string name="app_name">Invent</string>
    <string name="title_activity_scanned_barcode">ScannedBarcodeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_summary">Podsumowanie</string>
    <string name="title_bags">Torby</string>
    <string name="title_lockers">Szafki</string>
    <string name="title_scan">Skanuj</string>
    <string name="save">Zapisz</string>
    <string name="name">Nazwa</string>
    <string name="description">Opis</string>
    <string name="barcode_not_detected">Nie wykryto kodu kreskowego</string>
    <string name="add_new_item">Dodaj przedmiot</string>
    <string name="storage_place">Miejsce przechowania</string>
    <string name="barcode_scan">Skanuj kod</string>
    <string name="items_in_db">przedmiotów</string>
    <string name="storage_places_in_db">miejsc przechowania</string>
    <string name="expire_date">Data trwałości</string>


</resources>
